--- a/environment.yaml
+++ b/environment.yaml
@@ -4,175 +4,180 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - amply=0.1.6
-  - annotated-types=0.7.0
-  - appdirs=1.4.4
-  - argparse-dataclass=2.0.0
-  - attrs=25.3.0
-  - biopython=1.85
-  - brotli-python=1.1.0
-  - bzip2=1.0.8
-  - c-ares=1.34.5
-  - ca-certificates=2025.4.26
-  - capnproto=1.0.2
-  - certifi=2025.4.26
-  - cffi=1.17.1
-  - charset-normalizer=3.4.2
-  - click=8.1.8
-  - coin-or-cbc=2.10.12
-  - coin-or-cgl=0.60.9
-  - coin-or-clp=1.17.10
-  - coin-or-osi=0.108.11
-  - coin-or-utils=2.11.12
-  - coincbc=2.10.12
-  - colorama=0.4.6
-  - coloredlogs=15.0.1
-  - conda-inject=1.3.2
-  - configargparse=1.7
-  - connection_pool=0.0.3
-  - docutils=0.21.2
-  - dpath=2.2.0
-  - eido=0.2.4
-  - exceptiongroup=1.3.0
-  - fastani=1.34
-  - fasttree=2.1.11
-  - gitdb=4.0.12
-  - gitpython=3.1.44
-  - gsl=2.7
-  - h2=4.2.0
-  - harvesttools=1.2
-  - hpack=4.1.0
-  - htslib=1.22
-  - humanfriendly=10.0
-  - hyperframe=6.1.0
-  - idna=3.10
-  - immutables=0.21
-  - importlib_resources=6.5.2
-  - iniconfig=2.0.0
-  - jinja2=3.1.6
-  - jsonschema=4.23.0
-  - jsonschema-specifications=2025.4.1
-  - jupyter_core=5.7.2
-  - krb5=1.21.3
-  - ld_impl_linux-64=2.43
-  - libblas=3.9.0
-  - libcblas=3.9.0
-  - libcurl=8.14.0
-  - libdeflate=1.24
-  - libedit=3.1.20230828
-  - libev=4.33
-  - libexpat=2.7.0
-  - libffi=3.4.6
-  - libgcc=15.1.0
-  - libgcc-ng=15.1.0
-  - libgfortran=15.1.0
-  - libgfortran5=15.1.0
-  - libgomp=15.1.0
-  - liblapack=3.9.0
-  - liblapacke=3.9.0
-  - liblzma=5.8.1
-  - libnghttp2=1.64.0
-  - libnsl=2.0.1
-  - libopenblas=0.3.29
-  - libsqlite=3.49.2
-  - libssh2=1.11.1
-  - libstdcxx=15.1.0
-  - libstdcxx-ng=15.1.0
-  - libuuid=2.38.1
-  - libxcrypt=4.4.36
-  - libzlib=1.3.1
-  - llvm-openmp=8.0.1
-  - logmuse=0.2.8
-  - markdown-it-py=3.0.0
-  - markupsafe=3.0.2
-  - mash=2.3
-  - mdurl=0.1.2
-  - nbformat=5.10.4
-  - ncurses=6.5
-  - numpy=2.2.5
-  - openmp=8.0.1
-  - openssl=3.5.0
-  - packaging=25.0
-  - pandas=2.2.3
-  - parsnp=2.1.4
-  - pephubclient=0.4.4
-  - peppy=0.40.7
-  - perl=5.38.2
-  - phipack=1.1
-  - pip=25.1.1
-  - pkgutil-resolve-name=1.3.10
-  - plac=1.4.5
-  - platformdirs=4.3.8
-  - pluggy=1.5.0
-  - psutil=7.0.0
-  - pulp=2.8.0
-  - pycparser=2.22
-  - pydantic=2.11.4
-  - pydantic-core=2.33.2
-  - pygments=2.19.1
-  - pyparsing=3.2.3
-  - pysocks=1.7.1
-  - pyspoa=0.2.1
-  - pytest=8.3.5
-  - python=3.12.10
-  - python-dateutil=2.9.0.post0
-  - python-fastjsonschema=2.21.1
-  - python-tzdata=2025.2
-  - python_abi=3.12
-  - pytz=2025.2
-  - pyyaml=6.0.2
-  - raxml=8.2.13
-  - readline=8.2
-  - referencing=0.36.2
-  - requests=2.32.3
-  - reretry=0.11.8
-  - rich=14.0.0
-  - rpds-py=0.24.0
-  - setuptools=80.1.0
-  - shellingham=1.5.4
-  - six=1.17.0
-  - slack-sdk=3.35.0
-  - slack_sdk=3.35.0
-  - smart_open=7.1.0
-  - smmap=5.0.2
-  - snakemake=9.3.4
-  - snakemake-interface-common=1.17.4
-  - snakemake-interface-executor-plugins=9.3.5
-  - snakemake-interface-logger-plugins=1.2.3
-  - snakemake-interface-report-plugins=1.1.0
-  - snakemake-interface-storage-plugins=4.2.1
-  - snakemake-minimal=9.3.4
-  - tabulate=0.9.0
-  - throttler=1.2.2
-  - tk=8.6.13
-  - tomli=2.2.1
-  - tqdm=4.67.1
-  - traitlets=5.14.3
-  - typer=0.15.4
-  - typer-slim=0.15.4
-  - typer-slim-standard=0.15.4
-  - typing-extensions=4.13.2
-  - typing-inspection=0.4.0
-  - typing_extensions=4.13.2
-  - tzdata=2025b
-  - ubiquerg=0.8.0
-  - urllib3=2.4.0
-  - veracitools=0.1.3
-  - wgatools=1.0.0
-  - wheel=0.45.1
-  - wrapt=1.17.2
-  - yaml=0.2.5
-  - yte=1.7.0
-  - zipp=3.21.0
-  - zlib=1.3.1
-  - zstandard=0.23.0
-  - zstd=1.5.7
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - amply=0.1.6=pyhd8ed1ab_1
+  - annotated-types=0.7.0=pyhd8ed1ab_1
+  - appdirs=1.4.4=pyhd8ed1ab_1
+  - argparse-dataclass=2.0.0=pyhd8ed1ab_0
+  - attrs=25.3.0=pyh71513ae_0
+  - bcftools=1.21=h3a4d415_1
+  - biopython=1.85=py312h66e93f0_1
+  - brotli-python=1.1.0=py312h2ec8cdc_3
+  - bwa=0.7.18=h577a1d6_2
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.34.5=hb9d3cd8_0
+  - ca-certificates=2025.4.26=hbd8a1cb_0
+  - capnproto=1.0.2=h766bdaa_3
+  - certifi=2025.7.14=py312h06a4308_0
+  - cffi=1.17.1=py312h06ac9bb_0
+  - charset-normalizer=3.4.2=pyhd8ed1ab_0
+  - click=8.1.8=pyh707e725_0
+  - coin-or-cbc=2.10.12=h00e76a6_2
+  - coin-or-cgl=0.60.9=h82e2f02_4
+  - coin-or-clp=1.17.10=h8a7a1e7_1
+  - coin-or-osi=0.108.11=h96cc833_4
+  - coin-or-utils=2.11.12=h3a12e53_2
+  - coincbc=2.10.12=2_metapackage
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - coloredlogs=15.0.1=pyhd8ed1ab_4
+  - conda-inject=1.3.2=pyhd8ed1ab_0
+  - configargparse=1.7.1=pyhe01879c_0
+  - connection_pool=0.0.3=pyhd3deb0d_0
+  - docutils=0.21.2=pyhd8ed1ab_1
+  - dpath=2.2.0=pyha770c72_0
+  - eido=0.2.4=pyhd8ed1ab_0
+  - exceptiongroup=1.3.0=pyhd8ed1ab_0
+  - fastani=1.34=hb66fcc3_6
+  - fasttree=2.1.11=h7b50bb2_5
+  - gitdb=4.0.12=pyhd8ed1ab_0
+  - gitpython=3.1.44=pyhff2d567_0
+  - gsl=2.7=he838d99_0
+  - h2=4.2.0=pyhd8ed1ab_0
+  - harvesttools=1.2=ha9fde67_2
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - htslib=1.21=h566b1c6_1
+  - humanfriendly=10.0=pyh707e725_8
+  - hyperframe=6.1.0=pyhd8ed1ab_0
+  - idna=3.10=pyhd8ed1ab_1
+  - immutables=0.21=py312h66e93f0_1
+  - importlib_resources=6.5.2=pyhd8ed1ab_0
+  - iniconfig=2.0.0=pyhd8ed1ab_1
+  - jinja2=3.1.6=pyhd8ed1ab_0
+  - jsonschema=4.23.0=pyhd8ed1ab_1
+  - jsonschema-specifications=2025.4.1=pyh29332c3_0
+  - jupyter_core=5.7.2=pyh31011fe_1
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.3=h659f571_0
+  - ld_impl_linux-64=2.43=h1423503_5
+  - libblas=3.9.0=31_h59b9bed_openblas
+  - libcblas=3.9.0=31_he106b2a_openblas
+  - libcurl=8.14.0=h332b0f4_0
+  - libdeflate=1.24=h86f0d12_0
+  - libedit=3.1.20230828=h5eee18b_0
+  - libev=4.33=hd590300_2
+  - libexpat=2.7.0=h5888daf_0
+  - libffi=3.4.6=h2dba641_1
+  - libgcc=15.1.0=h767d61c_3
+  - libgcc-ng=15.1.0=h69a702a_3
+  - libgfortran=15.1.0=h69a702a_3
+  - libgfortran5=15.1.0=hcea5267_3
+  - libgomp=15.1.0=h767d61c_3
+  - liblapack=3.9.0=31_h7ac8fdf_openblas
+  - liblapacke=3.9.0=31_he2f377e_openblas
+  - liblzma=5.8.1=hb9d3cd8_2
+  - libnghttp2=1.64.0=h161d5f1_0
+  - libnsl=2.0.1=hb9d3cd8_1
+  - libopenblas=0.3.29=pthreads_h94d23a6_0
+  - libsqlite=3.49.2=hee588c1_0
+  - libssh2=1.11.1=hcf80075_0
+  - libstdcxx=15.1.0=h8f9b012_3
+  - libstdcxx-ng=15.1.0=h4852527_3
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - llvm-openmp=8.0.1=hc9558a2_0
+  - logmuse=0.2.8=pyhd8ed1ab_1
+  - markdown-it-py=3.0.0=pyhd8ed1ab_1
+  - markupsafe=3.0.2=py312h178313f_1
+  - mash=2.3=hb105d93_9
+  - mdurl=0.1.2=pyhd8ed1ab_1
+  - nbformat=5.10.4=pyhd8ed1ab_1
+  - ncurses=6.5=h2d0b736_3
+  - numpy=2.2.5=py312h72c5963_0
+  - openmp=8.0.1=0
+  - openssl=3.5.0=h7b32b05_1
+  - packaging=25.0=pyh29332c3_1
+  - pandas=2.2.3=py312hf9745cd_3
+  - parsnp=2.1.4=h077b44d_0
+  - pephubclient=0.4.4=pyhd8ed1ab_1
+  - peppy=0.40.7=pyhd8ed1ab_2
+  - perl=5.38.2=0_h5eee18b_perl5
+  - phipack=1.1=h7b50bb2_6
+  - pip=25.1.1=pyh8b19718_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
+  - plac=1.4.5=pyhd8ed1ab_0
+  - platformdirs=4.3.8=pyhe01879c_0
+  - pluggy=1.5.0=pyhd8ed1ab_1
+  - psutil=7.0.0=py312h66e93f0_0
+  - pulp=2.8.0=py312hd0750ca_2
+  - pycparser=2.22=pyh29332c3_1
+  - pydantic=2.11.4=pyh3cfb1c2_0
+  - pydantic-core=2.33.2=py312h680f630_0
+  - pygments=2.19.1=pyhd8ed1ab_0
+  - pyparsing=3.2.3=pyhd8ed1ab_1
+  - pysocks=1.7.1=pyha55dd90_7
+  - pyspoa=0.2.1=py312h5e9d817_4
+  - pytest=8.3.5=pyhd8ed1ab_0
+  - python=3.12.10=h9e4cc4f_0_cpython
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
+  - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+  - python-tzdata=2025.2=pyhd8ed1ab_0
+  - python_abi=3.12=8_cp312
+  - pytz=2025.2=pyhd8ed1ab_0
+  - pyyaml=6.0.2=py312h178313f_2
+  - raxml=8.2.13=h7b50bb2_3
+  - readline=8.2=h8c095d6_2
+  - referencing=0.36.2=pyh29332c3_0
+  - requests=2.32.3=pyhd8ed1ab_1
+  - reretry=0.11.8=pyhd8ed1ab_1
+  - rich=14.0.0=pyh29332c3_0
+  - rpds-py=0.24.0=py312h3b7be25_0
+  - samtools=1.21=h96c455f_1
+  - setuptools=80.1.0=pyhff2d567_0
+  - shellingham=1.5.4=pyhd8ed1ab_1
+  - six=1.17.0=pyhe01879c_1
+  - slack-sdk=3.35.0=pyhd8ed1ab_0
+  - slack_sdk=3.35.0=hd8ed1ab_0
+  - smart_open=7.1.0=pyhd8ed1ab_0
+  - smmap=5.0.2=pyhd8ed1ab_0
+  - snakemake=9.3.4=hdfd78af_0
+  - snakemake-interface-common=1.17.4=pyhdfd78af_0
+  - snakemake-interface-executor-plugins=9.3.5=pyhdfd78af_0
+  - snakemake-interface-logger-plugins=1.2.3=pyhdfd78af_0
+  - snakemake-interface-report-plugins=1.1.0=pyhdfd78af_0
+  - snakemake-interface-storage-plugins=4.2.1=pyhdfd78af_0
+  - snakemake-minimal=9.3.4=pyhdfd78af_0
+  - tabulate=0.9.0=pyhd8ed1ab_2
+  - throttler=1.2.2=pyhd8ed1ab_0
+  - tk=8.6.13=noxft_hd72426e_102
+  - tomli=2.2.1=pyhd8ed1ab_1
+  - tqdm=4.67.1=pyhd8ed1ab_1
+  - traitlets=5.14.3=pyhd8ed1ab_1
+  - typer=0.15.4=pyh9571d03_0
+  - typer-slim=0.15.4=pyhe01879c_0
+  - typer-slim-standard=0.15.4=haa4fddc_0
+  - typing-extensions=4.13.2=h0e9735f_0
+  - typing-inspection=0.4.0=pyhd8ed1ab_0
+  - typing_extensions=4.13.2=pyh29332c3_0
+  - tzdata=2025b=h78e105d_0
+  - ubiquerg=0.8.0=pyhd8ed1ab_0
+  - urllib3=2.4.0=pyhd8ed1ab_0
+  - veracitools=0.1.3=py_0
+  - wgatools=1.0.0=hf6a8760_0
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - wrapt=1.17.2=py312h66e93f0_0
+  - yaml=0.2.5=h280c20c_3
+  - yte=1.7.0=pyha770c72_1
+  - zipp=3.21.0=pyhd8ed1ab_1
+  - zlib=1.3.1=hb9d3cd8_2
+  - zstandard=0.23.0=py312h66e93f0_2
+  - zstd=1.5.7=hb8e6e7a_2
   - pip:
       - clarabel==0.10.0
       - cvxpy==1.6.5
       - ecos==2.0.14
+      - git-filter-repo==2.47.0
       - joblib==1.5.0
       - osqp==1.0.4
       - pysam==0.23.0
